[package]
name = "milenio-api-rust"
version = "0.1.0"
authors = ["jmarzin <jacques.marzin@free.fr>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
state = "0.2"
rocket-multipart-form-data = "0.7.0"
lettre = "0.9"
lettre_email = "0.9"
rocket_cors = "0.5.0-beta-2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve"]